# aseprite-rgba-converter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  doc-lite.h  loader.cpp  loader.h
AsepriteRgbaConvert/: blend.cpp  blend.h  doc-lite.h  loader-detail.cpp  loader-detail.hpp  loader.cpp  loader.h
integration_test/: CMakeLists.txt  Sprite-0001.ase  Sprite-0002.ase  Sprite-0003.ase  Sprite-0004.ase  Sprite-0005-Layers.ase  main.cpp
